[package]
name = "h3o-cli"
version = "0.1.1"
authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
edition = "2021"
description = "A CLI app that exposes most of the h3o API for scripting."
documentation = "https://docs.rs/h3o-cli/"
readme = "README.md"
homepage = "https://docs.rs/h3o-cli"
repository = "https://github.com/HydroniumLabs/h3o-cli"
license = "BSD-3-Clause"
keywords = ["geography", "geospatial", "gis", "h3", "spatial-index"]
categories = ["science"]

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"]}
clap = { version = "4.0.30", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
either = { version = "1.0", default-features = false }
geojson = { version = "0.24", default-features = false, features = ["geo-types"] }
geo-types = { version = "0.7", default-features = false }
h3o = { version = "0.2", default-features = false, features = ["geo", "serde"] }
kml = { version = "0.6", default-features = false, features = ["geo-types"]}
maplit = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
thc = { version = "0.1", default-features = false }

[dev-dependencies]
lit = { version = "1.0", default-features = false }

[lib]
# doctests are good for docs, but unfortunately they are slow.
# Cf. https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
doctest = false

[profile.release]
strip = true
